--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "qrcode": "^1.5.4"
+  },
+  "devDependencies": {
+    "@types/qrcode": "^1.5.5",
+    "typescript": "^5.8.3"
   }
 }
